--- a/src/components/editor/aq-editor-edit-nonprogrammer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer.html
@@ -18,11 +18,11 @@
 <link rel='import' href="./aq-editor-edit-nonprogrammer-optimizer.html">
 <link rel='import' href="./aq-editor-edit-nonprogrammer-indicator.html">
 
-<dom-module id='aq-editor-edit-nonprogrammer3'>
+<dom-module id='aq-editor-edit-nonprogrammer'>
 	<style>
 
 		paper-toolbar {
-      		--paper-toolbar-height:40px;
+      		--paper-toolbar-height:50px;
 			--paper-toolbar-background:#B2DFDB;--#e0f2f1;
 		    --paper-toolbar-color:black;
     	}
@@ -37,6 +37,8 @@
 
     	#container {
     		margin-top:0px;
+    		margin-right: 0px;
+    		margin-left:0px;
     	}
 
     	#runCanvas {
@@ -148,7 +150,7 @@
 
 	<script>
 		Polymer({
-			is: 'aq-editor-edit-nonprogrammer3',
+			is: 'aq-editor-edit-nonprogrammer',
 
 			properties :{
 				selectedSideBar: {
