--- a/src/components/analyze/aq-analyze-compare-results.html
+++ b/src/components/analyze/aq-analyze-compare-results.html
@@ -1,6 +1,6 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
-<link rel='import' href='./aq-analyze-item-comparison.html'>
+<link rel='import' href='../common/aq-backtest-comparison-item.html'>
 <dom-module id='aq-analyze-compare-results'>
 	<style is="custom-style" include="iron-flex iron-positioning"></style>
 	
@@ -55,7 +55,7 @@
 		</div>	
 
 		<div id='container'>
-			<aq-analyze-item-comparison></aq-analyze-item-comparison>
+			<aq-backtest-comparison-item></aq-backtest-comparison-item>
 		</div>
 		
 	</template>
