--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -1,4 +1,3 @@
-
 <link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 
 <link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
@@ -8,46 +7,82 @@
 
 <link rel="import" href="../aq-markdown-editor.html">
 
-
 <style is="custom-style" include="iron-flex iron-positioning"></style>
 
 <dom-module id="aq-community-createpost">
-  <template>
-    <!--div class="scroll-content"-->
+    <template>
+        <!--div class="scroll-content"-->
 
-      <!-- TODO: don't pass all messages, users, labels into mail-thread -->
-      <!-- activate-event="" ensures entire thread isn't selectable. -->
-      <!--iron-selector id="threadlist" multi activate-event=""
+        <!-- TODO: don't pass all messages, users, labels into mail-thread -->
+        <!-- activate-event="" ensures entire thread isn't selectable. -->
+        <!--iron-selector id="threadlist" multi activate-event=""
                      selected-attribute="selected"
                      selected-items="{{selectedThreads}}"
                      on-iron-select="_onThreadSelectChange"
                      on-iron-deselect="_onThreadSelectChange">
         <!--template is="dom-repeat" items="[[threads]]"-->
 
-            <div class="layout vertical flex" style="width:90%; margin-top:30px; margin-left:15px">
-              <div class="flex layout horizontal">
+        <div class="layout vertical flex" style="width:90%; margin-top:30px; margin-left:15px">
+            <div class="flex layout horizontal">
                 <h1 style="height:25px; background-color:white">
-                  Create a Post
+                    Create a Post
                 </h1>
-              </div>
+            </div>
 
-              <paper-input label="Topic" style="width:100%; height:30px; margin-bottom:10px"></paper-input>
-              
-              <aq-markdown-editor placeholder="Describe in detail"></aq-markdown-editor>
+            <paper-input label="Topic" style="width:100%; height:30px; margin-bottom:10px"></paper-input>
 
-              <div class="layout horizontal">
+            <aq-markdown-editor placeholder="Describe in detail"></aq-markdown-editor>
+
+            <div class="layout horizontal">
                 <div class="flex"></div>
-                <paper-button raised style="max-width:5%" noink>Preview</paper-button>
-                <paper-button raised style="max-width:5%" noink>Submit</paper-button>
-              </div>   
+                <paper-button raised style="max-width:5%" noink on-tap="Preview">Preview</paper-button>
+                <paper-button raised style="max-width:5%" noink on-tap="postThread">Submit</paper-button>
+            </div>
 
-
-            </div>        
-  </template>>
-</dom-module>  
-
-<script>
-  Polymer({
-    is:'aq-community-createpost',
-  });
-</script>>
+        </div>
+        <iron-ajax
+          url="http://localhost:3002/api/v2/thread"
+          body="{{threadData}}"
+          method='POST'
+          id='thread'
+          headers='{{header}}'
+          handle-as="json"
+          on-response="handlePostThread"
+          last-response="{{ajaxResponse}}"
+          debounce-duration="300"></iron-ajax>
+    </template>
+    <script>
+        Polymer({
+          is: 'aq-community-createpost',
+          properties: {
+            threadData: {
+              type: Object
+            }
+          },
+          ready: function() {
+              var x = localStorage.getItem('my-app-storage');
+              var user = JSON.parse(x).user;
+              this.header = {
+                  "aimsquant-token": user.token,
+                  "Content-Type": "application/json"
+              }
+          },
+          postThread: function() {
+            const scope = document.getElementById('mirror');
+            const input = document.getElementById('input');
+            const thread = scope.innerHTML;
+            const topic = input.value;
+            this.threadData = {
+                "category": 'Share your idea',
+                "title": topic,
+                "markdownText": thread
+            };
+            debugger;
+            this.$.thread.generateRequest();
+          },
+          handlePostThread: function () {
+              debugger;
+          }
+        });
+    </script>
+</dom-module>
