--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -1,139 +1,157 @@
-
 <link rel='import' href='../../../bower_components/paper-fab/paper-fab.html'>
 <link rel="import" href="./aq-community-home-searchbar.html">
 <link rel="import" href="./aq-community-home-post-item.html">
 
-
-  <style>
+<style>
 
     .insidetoolbar {
-      outline-color: blue;
-      border:solid;
+        outline-color: blue;
+        border: solid;
     }
 
     input {
-      font: inherit;
-      font-size: 16px;
-      color: black;
+        font: inherit;
+        font-size: 16px;
+        color: black;
     }
 
     #container {
-      margin-left: 20px;
-      margin-right: 20px;
-      margin-top: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 30px;
     }
 
     #fab {
-      background:teal;
-      --float:right;
-      position: fixed;
-      right: 25px;
-      bottom: 30px;
+        background: teal;
+        --float: right;
+        position: fixed;
+        right: 25px;
+        bottom: 30px;
     }
 
     paper-tabs {
-      --paper-tabs-selection-bar-color:teal;
+        --paper-tabs-selection-bar-color: teal;
     }
 
     .community-tabs {
-      max-width: 350px;
-      font-size: 14px;
-      margin-top:20px;
-      border-bottom:1px solid #e5e5e5;
+        max-width: 350px;
+        font-size: 14px;
+        margin-top: 20px;
+        border-bottom: 1px solid #e5e5e5;
     }
-    
+
     #allposts {
-      margin-top: 50px;
+        margin-top: 50px;
     }
-    
-  </style>
 
-
+</style>
 
 <dom-module id="aq-community-home">
-  <template>
-      <div id='container'>
-        <aq-community-home-searchbar></aq-community-home-searchbar>
-        <paper-tabs class="community-tabs" class="flex" selected="{{selected}}" noink>
-          <paper-tab>All</paper-tab>
-          <paper-tab>Popular</paper-tab>
-          <paper-tab>Newest</paper-tab>
-          <paper-tab>Following</paper-tab>
-          <paper-tab>Personal</paper-tab>
-        </paper-tabs>
+    <template>
+        <div id='container'>
+            <aq-community-home-searchbar></aq-community-home-searchbar>
+            <paper-tabs class="community-tabs" class="flex" selected="{{selected}}" noink>
+                <paper-tab>All</paper-tab>
+                <paper-tab>Popular</paper-tab>
+                <paper-tab>Newest</paper-tab>
+                <paper-tab>Following</paper-tab>
+                <paper-tab>Personal</paper-tab>
+            </paper-tabs>
 
-        <div id='allposts'>
-          <iron-pages selected="{{selected}}">
-            <div>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+            <div id='allposts'>
+                <iron-pages selected="{{selected}}">
+                    <div>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Ahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Hil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="il Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            </div> 
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Ahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-            <div>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="l Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Hil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>      
-            </div> 
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="il Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                    </div>
 
-            <div>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="padhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                    <div>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="l Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="adhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="dhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                    </div>
 
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            </div> 
+                    <div>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="padhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-            <div>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="adhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            </div> 
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="dhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
 
-            <div>
-              <aq-community-home-post-item  topic-address="#/dashboard/community/topics" topic-heading= "My new topics" author-name="Sahil Upadhyay" author-address= "sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
-            </div> 
-            
-          </iron-pages>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                    </div>
+
+                    <div>
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+
+                        <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                    </div>
+
+                    <div>
+                        <template is="dom-repeat" items="{{items}}">
+                            <aq-community-home-post-item topic-address="#/dashboard/community/topics" topic-heading="My new topics" author-name="Sahil Upadhyay" author-address="sahil" post-date="jan 15, 2015" total-replies="16" total-views="90" post-category="FAQs"></aq-community-home-post-item>
+                        </template>
+                    </div>
+
+                </iron-pages>
+            </div>
         </div>
-      </div>
-      
-      <paper-fab id='fab' noik icon="icons:add" title="New Post" on-tap='createPost'></paper-fab>
-  </template>
-</dom-module>  
 
-<script>
-  Polymer({
-    is:'aq-community-home',
+        <paper-fab id='fab' noik icon="icons:add" title="New Post" on-tap='createPost'></paper-fab>
+    </template>
+    <script>
+        Polymer({
+            is: 'aq-community-home',
 
-    properties: {
-      selected: {
-        type: String,
-        value: 0,
-      },
-    },
-    
-    createPost() {
-      this.router.go('/dashboard/community/create');
-    },
-
-  });
-</script>>
+            properties: {
+                selected: {
+                    type: String,
+                    value: 0
+                },
+                items: {
+                    type: Object
+                }
+            },
+            ready: function() {
+                this.items = [
+                    {
+                        "name": "Bob"
+                    }, {
+                        "name": "Tim"
+                    }, {
+                        "name": "Mike"
+                    }
+                ];
+                this.employees = [
+                    {
+                        first: 'Bob',
+                        last: 'Smith'
+                    }, {
+                        first: 'Sally',
+                        last: 'Johnson'
+                    }
+                ];
+            },
+            createPost() {
+                this.router.go('/dashboard/community/create');
+            }
+        });
+    </script>
+</dom-module>
