Modified css. Added colors to the website and modified fonts and sizes of the windows in the editor and other components. Still a lot of css changes to come!!

--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -9,17 +9,20 @@
   <style is="custom-style" include="iron-flex iron-positioning"></style>
   <style>
 
-   paper-toolbar {
+  paper-toolbar {
       --paper-toolbar-title: {
         text-align: left;
         margin-left: 0px !important;
       };
-
-      --paper-toolbar-background: #fff;
-      --paper-toolbar-color: #000;
-      opacity: var(--dark-primary-opacity);
-      border-bottom: 1px solid #e0e0e0;
     }
+  
+  paper-toolbar {
+      --paper-toolbar-background: #333a56;--#30415d;--#1C263C;
+      
+      --opacity:var(--dark-primary-opacity);
+      --border-bottom: 1px solid #e0e0e0;
+  }
+
 
     #profile {
       right:0;
