--- a/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
@@ -106,15 +106,8 @@
 <dom-module id='aq-editor-edit-nonprogrammer-optimizer'>
 	
 	<style>
-		paper-card {
-			margin:10px;
-			margin-left:25px;
-			width:95%;
-		}
-
 		span {
 			font-size: 13px;
-			margin-left: 10px;
 		}
 
 		.basic {
@@ -124,8 +117,7 @@
 		}
 
 		aq-dropdown {
-			--dropdown-width:250px;
-			
+			--dropdown-width:250px;		
 		}
 
 		#weightscheme-dd {
@@ -137,118 +129,116 @@
 		}
 
 		#container {
-			--border: 1px solid grey;
+			margin-left:5%;
+			color:#333a56;
 		}
 
 	</style>
 
-	<template>	
-		<!--paper-card heading="Portfolio Optimization"-->
-			<h2>Portfolio Optimization</h2>
+	<template>			
+		<div id='container'>	
+			<h2>Portfolio Optimization</h2>		
+			<span>Pick the optimizer</span>
+			<aq-dropdown id ='optType-dd' options="[[optimizerOptions]]"></aq-dropdown>
 
-			<div id='container'>			
-				<span>Pick the optimizer</span>
-				<aq-dropdown id ='optType-dd' options="[[optimizerOptions]]"></aq-dropdown>
+			<iron-pages selected="{{optimizationType}}">
 
-				<iron-pages selected="{{optimizationType}}">
-
-					<div>
-						<span>Selected a weighting scheme</span>
-						<!--aq-dropdown id='weightscheme-dd' options="[[weightedPortOptions]]"></aq-dropdown>
-						<template is='dom-if' if='{{isReverseVolatility(weightScheme)}}'>
-							<span>Days:</span>
-							<input>	
-						</template-->
-						<paper-radio-group attr-for-selected="index" selected="{{weightScheme}}">
-							
-							<template is='dom-repeat' items='{{weightedPortOptions}}'>
-								<paper-radio-button index={{item.index}} name="{{item.value}}">{{item.value}}</paper-radio-button>
-							</template>
-
-							<!--paper-radio-button index=0 name="uniform">
-								Uniform Weighting
-							</paper-radio-button>
-							<paper-radio-button index=1 name="mcap">Market Capitalization
-							</paper-radio-button>
-							<paper-radio-button index=2 name="crmcap">Cube Root Market Capitalization
-							</paper-radio-button>
-							<paper-radio-button index=3 name="1year">Reverse Volatility
-							</paper-radio-button-->
-						</paper-radio-group>
-
-						<template is='dom-if' if='{{isReverseVolatility(weightScheme)}}'>
-							<div>
-								<span>Select the horizon of historical standard deviation</span>
-									<paper-radio-group>
-										<paper-radio-button toggles name="1month">1 Month
-										</paper-radio-button>
-										<paper-radio-button  toggles name="3months">3 Month
-										</paper-radio-button>
-										<paper-radio-button  toggles name="6months">6 months
-										</paper-radio-button>
-										<paper-radio-button  toggles name="1year">1 year
-										</paper-radio-button>
-										<paper-radio-button  toggles name="2year">2 year
-									</paper-radio-button>
-								</paper-radio-group>
-							</div>	
+				<div>
+					<span>Selected a weighting scheme</span>
+					<!--aq-dropdown id='weightscheme-dd' options="[[weightedPortOptions]]"></aq-dropdown>
+					<template is='dom-if' if='{{isReverseVolatility(weightScheme)}}'>
+						<span>Days:</span>
+						<input>	
+					</template-->
+					<paper-radio-group attr-for-selected="index" selected="{{weightScheme}}">
+						
+						<template is='dom-repeat' items='{{weightedPortOptions}}'>
+							<paper-radio-button index={{item.index}} name="{{item.value}}">{{item.value}}</paper-radio-button>
 						</template>
 
+						<!--paper-radio-button index=0 name="uniform">
+							Uniform Weighting
+						</paper-radio-button>
+						<paper-radio-button index=1 name="mcap">Market Capitalization
+						</paper-radio-button>
+						<paper-radio-button index=2 name="crmcap">Cube Root Market Capitalization
+						</paper-radio-button>
+						<paper-radio-button index=3 name="1year">Reverse Volatility
+						</paper-radio-button-->
+					</paper-radio-group>
 
-						<template is='dom-if' if='{{isNormalizedMomentum(weightScheme)}}'>
-							<div>
-								<span>Select the horizon for momentum</span>
-									<paper-radio-group>
-										<paper-radio-button toggles name="1month">1 Month
-										</paper-radio-button>
-										<paper-radio-button  toggles name="3months">3 Month
-										</paper-radio-button>
-										<paper-radio-button  toggles name="6months">6 months
-										</paper-radio-button>
-										<paper-radio-button  toggles name="1year">1 year
-										</paper-radio-button>
-										<paper-radio-button  toggles name="2year">2 year
+					<template is='dom-if' if='{{isReverseVolatility(weightScheme)}}'>
+						<div>
+							<span>Select the horizon of historical standard deviation</span>
+								<paper-radio-group>
+									<paper-radio-button toggles name="1month">1 Month
 									</paper-radio-button>
-								</paper-radio-group>
-							</div>	
-						</template>
+									<paper-radio-button  toggles name="3months">3 Month
+									</paper-radio-button>
+									<paper-radio-button  toggles name="6months">6 months
+									</paper-radio-button>
+									<paper-radio-button  toggles name="1year">1 year
+									</paper-radio-button>
+									<paper-radio-button  toggles name="2year">2 year
+								</paper-radio-button>
+							</paper-radio-group>
+						</div>	
+					</template>
 
+
+					<template is='dom-if' if='{{isNormalizedMomentum(weightScheme)}}'>
+						<div>
+							<span>Select the horizon for momentum</span>
+								<paper-radio-group>
+									<paper-radio-button toggles name="1month">1 Month
+									</paper-radio-button>
+									<paper-radio-button  toggles name="3months">3 Month
+									</paper-radio-button>
+									<paper-radio-button  toggles name="6months">6 months
+									</paper-radio-button>
+									<paper-radio-button  toggles name="1year">1 year
+									</paper-radio-button>
+									<paper-radio-button  toggles name="2year">2 year
+								</paper-radio-button>
+							</paper-radio-group>
+						</div>	
+					</template>
+
+				</div>
+
+				<div class="layout vertical">
+					<span>Select the horizon of historical standard deviation</span>
+					<paper-radio-group selected name="1month">
+						<paper-radio-button toggles name="1month">1 Month
+						</paper-radio-button>
+						<paper-radio-button  toggles name="3months">3 Month
+						</paper-radio-button>
+						<paper-radio-button  toggles name="6months">6 months
+						</paper-radio-button>
+						<paper-radio-button  toggles name="1year">1 year
+						</paper-radio-button>
+						<paper-radio-button  toggles name="2year">2 year
+						</paper-radio-button>
+					</paper-radio-group>	
+
+					<div class="layout horizontal">
+						<span>Want to add constaints?</span>
+						<paper-button on-tap='addConstraints'><iron-icon icon="icons:add"></iron-icon>
+							Add Constraints
+						</paper-button>
 					</div>
 
-					<div class="layout vertical">
-						<span>Select the horizon of historical standard deviation</span>
-						<paper-radio-group selected name="1month">
-							<paper-radio-button toggles name="1month">1 Month
-							</paper-radio-button>
-							<paper-radio-button  toggles name="3months">3 Month
-							</paper-radio-button>
-							<paper-radio-button  toggles name="6months">6 months
-							</paper-radio-button>
-							<paper-radio-button  toggles name="1year">1 year
-							</paper-radio-button>
-							<paper-radio-button  toggles name="2year">2 year
-							</paper-radio-button>
-						</paper-radio-group>	
-
-						<div class="layout horizontal">
-							<span>Want to add constaints?</span>
-							<paper-button on-tap='addConstraints'><iron-icon icon="icons:add"></iron-icon>
-								Add Constraints
-							</paper-button>
-						</div>
-
-						<div id='constraintcontainer'>
-							<aq
-						</div>
-
-
+					<div id='constraintcontainer'>
+						<aq
 					</div>
 
-				</iron-pages>
+
+				</div>
+
+			</iron-pages>
 
 
-			</div>
-		<!--/paper-card-->
+		</div>
 	</template>
 
 	<script>
