--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -18,14 +18,17 @@
     }
 
     #container {
-      margin-left: 20px;
-      margin-right: 20px;
+      width:90%;
+      margin:0 auto;
       margin-top: 30px;
     }
 
+    #search {
+      width: 70%;
+    }
+
     #fab {
-      background:teal;
-      --float:right;
+      background: #333a56;;
       position: fixed;
       right: 25px;
       bottom: 30px;
@@ -53,7 +56,7 @@
 <dom-module id="aq-community-home">
   <template>
       <div id='container'>
-        <aq-community-home-searchbar></aq-community-home-searchbar>
+        <aq-community-home-searchbar id="search"></aq-community-home-searchbar>
         <paper-tabs class="community-tabs" class="flex" selected="{{selected}}" noink>
           <paper-tab>All</paper-tab>
           <paper-tab>Popular</paper-tab>
