--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -43,14 +43,14 @@
 
     paper-drawer-panel {
       height:100%;
-      --background-color:#E0F2F1
+      background-color: #EFEFEF;--D9D9D9;--#E0F2F1
+      
     }
-
  
   </style>
   
   <template>
-    <paper-drawer-panel id="drawerpanel" force-narrow="[[computeForceNarrow(narrow, showSidebar)]]" responsive-width='1100px' drawer-width='250px' narrow="{{narrow}}">
+    <paper-drawer-panel id="drawerpanel" force-narrow="[[computeForceNarrow(narrow, showSidebar)]]" responsive-width='900px' drawer-width='200px' narrow="{{narrow}}">
 
       <aq-sidebar menuSelected="{{view}}" drawer></aq-sidebar>
       <paper-header-panel id="mainpanel" main fixed mode="seamed">
