--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -21,15 +21,7 @@
 		:host{
 			font-family: 'Roboto', sans-serif;
 		}
-		paper-card {
-			--width:98%;
-			margin-bottom: 20px;			
-		}
-
-		paper-card #content{
-			height:25%;
-		}
-
+	
 		.metric {
 			margin-right: 10px;
 			margin-left:10px;
@@ -47,25 +39,11 @@
 			font-size:12px;
 		}
 
-		paper-card p{
-			width:200px;
-		}
-
-		paper-checbox {
-			height: 20px;
-			width:20px;
-			margin: 5px;
-		}
-
-		paper-card :hover{
-			color:green;
-			z-index:20;
-		}
-
 		#container {
 		    margin-left: 30px;
 		    margin-right: 30px;
 		    margin-top: 10px;
+		    color: #333a56; 
 		  }
 
 	  	#dialog{
