--- a/src/components/aq-markdown-editor.html
+++ b/src/components/aq-markdown-editor.html
@@ -17,6 +17,15 @@ p<link rel="import" href="../../bower_components/marked-element/marked-element.h
       background-color: none;
       height:100%;
     }
+
+    paper-icon-button:active {
+      padding:10px;
+    }
+
+    paper-icon-button {
+      width:35px;
+      height:35px;  
+    }
     
   </style>
 
@@ -25,25 +34,25 @@ p<link rel="import" href="../../bower_components/marked-element/marked-element.h
 
       <div class="flex layout horizontal" style="border:1px solid;">
         <!--div class="flex horizontal layout"-->
-          <paper-icon-button icon="editor:format-bold" title="Bold"></paper-icon-button>
-          <paper-icon-button icon="editor:format-italic" title="Italic"></paper-icon-button>
-          <paper-icon-button icon="editor:format-underlined" title="Underline" ></paper-icon-button>
+          <paper-icon-button noink icon="editor:format-bold" title="Bold"></paper-icon-button>
+          <paper-icon-button noink icon="editor:format-italic" title="Italic"></paper-icon-button>
+          <paper-icon-button noink icon="editor:format-underlined" title="Underline" ></paper-icon-button>
         <!--/div-->
 
         <div class="flex" style="max-width:5%"></div>
 
         
         <!--div class="layout horizontal"-->
-          <paper-icon-button icon="editor:format-quote" title="Blockquote"></paper-icon-button>
-          <paper-icon-button icon="icons:code" title="Code Sample"></paper-icon-button>
-          <paper-icon-button icon="icons:link" title="Hyperlink"></paper-icon-button>
-          <paper-icon-button icon="editor:insert-photo" title="Image"></paper-icon-button>
+          <paper-icon-button noink icon="editor:format-quote" title="Blockquote"></paper-icon-button>
+          <paper-icon-button noink icon="icons:code" title="Code Sample"></paper-icon-button>
+          <paper-icon-button noink icon="icons:link" title="Hyperlink"></paper-icon-button>
+          <paper-icon-button noink icon="editor:insert-photo" title="Image"></paper-icon-button>
         <!--/div-->
 
         <div class="flex" style="max-width:5%"></div>
         <!--div class="layout horizontal"-->
-        <paper-icon-button icon="editor:format-list-bulleted" title="Bullet List"></paper-icon-button>
-        <paper-icon-button icon="editor:format-list-numbered" title="Number List"></paper-icon-button>
+        <paper-icon-button noink icon="editor:format-list-bulleted" title="Bullet List"></paper-icon-button>
+        <paper-icon-button noink icon="editor:format-list-numbered" title="Number List"></paper-icon-button>
         <!--/div-->
 
         <div class="flex"></div>
