--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -16,6 +16,7 @@
 		#search {
 		  height: 46px;
 		  line-height: 48px;
+		  width:70%;
 		}
 	
 		#searchbox {
@@ -28,6 +29,9 @@
 		  border: 1px solid #e5e5e5;
 		  @apply(--paper-font-body1);
 		  font-size: 16px;
+		  margin-left:-0px;
+		  --border-left:none !important;
+		  margin-top:1px;
 		}
 
 		#searchbox:focus{
@@ -60,6 +64,7 @@
 	    	position:absolute;
 	    	top:-2px;
 	    }
+
 	 	iron-icon {
 	    	position:absolute;
 	    	top: 10px;
@@ -70,26 +75,21 @@
 			width: 50px
 		}
 
+		#category-dd {
+			--dropdown-width:170px;
+			--dropdown-border: 1px solid #e5e5e5;
+			--dropdown-height:46px;
+			--dropdown-font-size:16px;
+			--dropdown-paper-menu-font-size:16px;
+			--dropdown-background-color:#99ced4;
+		}
+
 
 	</style>
 	
 	<template>
-      		<div id="search" class="layout horizontal">
-	      		<paper-menu-button id="button" vertical-offset = 47>
-	        		<paper-button noink class="dropdown-trigger">
-	        			<div id='content'>
-	        				<span id="category">{{selectedCategory}}</span>
-	        				<iron-icon icon="icons:arrow-drop-down"></iron-icon>
-	        			</div>  
-	        		</paper-button>
-	        		
-	        		<paper-menu class="dropdown-content" attr-for-selected="value" selected="{{selectedCategory}}">
-	        		 	<paper-item value="Everywhere">Everywhere</paper-item>
-	        			<paper-item value="Category 1">Category 1</paper-item>
-	        			<paper-item value="Category 2">Category 2</paper-item>
-	        			<paper-item value="Category 3">Category 3</paper-item>
-	        		</paper-menu>
-	    		</paper-menu-button>
+      		<div id="search" class="flex layout horizontal">
+	    		<aq-dropdown horizontal-offset=0 vertical-offset=50 class="self-center" id='category-dd' options="[[categories]]"></aq-dropdown>
     		
 
 	  			<input id="searchbox" placeholder="Search posts " class="flex"
@@ -97,6 +97,8 @@
 			</div>
 	</template>
 	<script >
+		var categories = [{value:'Everywhere',index:0},{value:'Share your Idea',index:1},{value:'FAQ',index:2},{value:'Announcements',index:3}];
+		
 		Polymer({
 			is: 'aq-community-home-searchbar',
 			properties: {
@@ -104,6 +106,10 @@
 						type: String,
 						value: 'Everywhere',
 				},
+			},
+
+			ready() {
+				this.categories = categories;
 			},
 
 		});
