--- a/src/components/common/aq-dropdown.html
+++ b/src/components/common/aq-dropdown.html
@@ -2,23 +2,38 @@
 	<style>
 		paper-button {
 			border: var(--dropdown-border, 1px solid grey);
-			width: var(--dropdown-width,130px);
-			--min-width:100px;
+			width: var(--dropdown-width,10px);
+			min-width:10px;
 			text-transform: none;
 			font-weight: var(--dropdown-font-weight, normal);
 			font-size: var(--dropdown-font-size,12px);
 			height: var(--dropdown-height, 30px);
+			background-color: var(--dropdown-background-color, white);
+			margin:0px;
 		}
 
 		paper-item {
 			--paper-item-selected-weight:normal;
 			font-size: var(--dropdown-paper-menu-font-size, 12px);
 			text-decoration: none;
+			background-color: var(--dropdown-background-color, white);
 		}
+
+		paper-menu-button {
+			--paper-menu-button-dropdown:{
+				width: var(--dropdown-width,10px);
+				--background-color: var(--dropdown-background-color, white);
+			}
+		}
+
+		paper-menu-button {
+			padding: 0px;
+		}
+
 	</style>
 
 	<template>
-		<paper-menu-button vertical-offset = 47 horizontal-offset=20>
+		<paper-menu-button vertical-offset=[[verticalOffset]] horizontal-offset=[[horizontalOffset]]>
     		<paper-button noink class="button flex dropdown-trigger self-center">
 				<span class="flex" id="category">{{selectedCategory.value}}</span>
 				<iron-icon icon="icons:arrow-drop-down"></iron-icon>
@@ -51,6 +66,17 @@
 					type:Number,
 					value:0,
 				},
+
+				verticalOffset: {
+					type: Number,
+					value: 40,
+				},
+
+				horizontalOffset :{
+					type:Number,
+					value:0,
+				},
+
 			},
 
 			optionsAdded() {
