--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -24,7 +24,7 @@
                      on-iron-deselect="_onThreadSelectChange">
         <!--template is="dom-repeat" items="[[threads]]"-->
 
-            <div class="layout vertical flex" style="width:90%; margin-top:30px; margin-left:15px">
+            <div class="layout vertical flex" style="width:90%; margin-top:30px; margin:0 auto;">
               <div class="flex layout horizontal">
                 <h1 style="height:25px; background-color:white">
                   Create a Post
