--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -1,8 +1,12 @@
 
 <link rel='import' href='../../../bower_components/paper-fab/paper-fab.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tabs.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tab.html'>
 <link rel="import" href="./aq-community-home-searchbar.html">
 <link rel="import" href="./aq-community-home-post-item.html">
 
+
+<dom-module id="aq-community-home">
 
   <style>
 
@@ -21,28 +25,28 @@
       width:90%;
       margin:0 auto;
       margin-top: 30px;
-    }
-
-    #search {
-      width: 70%;
+      color: #333a56;
     }
 
     #fab {
-      background: #333a56;;
+      background: #333a56;
       position: fixed;
       right: 25px;
       bottom: 30px;
     }
 
-    paper-tabs {
-      --paper-tabs-selection-bar-color:teal;
+    
+    paper-tab:hover{
+      font-size: 110%;
+      font-weight: bolder;
     }
 
-    .community-tabs {
+    #community-tabs {
       max-width: 350px;
       font-size: 14px;
       margin-top:20px;
       border-bottom:1px solid #e5e5e5;
+      --paper-tabs-selection-bar-color: #99ced4; --#333a56;
     }
     
     #allposts {
@@ -51,13 +55,10 @@
     
   </style>
 
-
-
-<dom-module id="aq-community-home">
   <template>
       <div id='container'>
         <aq-community-home-searchbar id="search"></aq-community-home-searchbar>
-        <paper-tabs class="community-tabs" class="flex" selected="{{selected}}" noink>
+        <paper-tabs id="community-tabs" class="flex" selected="{{selected}}" noink>
           <paper-tab>All</paper-tab>
           <paper-tab>Popular</paper-tab>
           <paper-tab>Newest</paper-tab>
