--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -43,11 +43,13 @@
     }
 
     paper-icon-button {
-      padding: 0px;
-      height:20px;
-      width:20px;
+      --padding: 0px;
+      height:35px;
+      width:35px;
       margin-right: 15px;
       margin-top:5px;
+      outline: 1px solid; -- #333a56;
+      --color: #188364; --#99ced4;
     }
 
     #header-content {
